fix registering error
